--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "bcryptjs": "^3.0.2",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
     "express-session": "^1.18.1",
+    "fs-extra": "^11.3.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "typescript": "^5.7.3"
