--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
     "@prisma/client": "^6.4.1",
     "@quixo3/prisma-session-store": "^3.1.13",
     "bcryptjs": "^3.0.2",
+    "bulma": "^1.0.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
     "express-session": "^1.18.1",
     "fs-extra": "^11.3.0",
+    "next-themes": "^0.4.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "react-icons": "^5.5.0",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
